Center aligns Fixtures error text

--- a/src/components/fixtures/styles.scss
+++ b/src/components/fixtures/styles.scss
@@ -10,8 +10,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 20px;
+  font-size: 16px;
   height: 100%;
+  text-align: center;
 }
 
 .fa-fixtures-heading {
